--- a/config/rawConf.conf
+++ b/config/rawConf.conf
@@ -1,24 +1,6 @@
 # circos.conf
 
-#karyotype = data/karyotype.txt
-
-<plots>
-
-<plot>
-
-type       = text
-label_font = glyph
-file       = data/plot.txt
-padding  = 0p
-rpadding = 0p
-r0 = 1r
-r1 = 1.1r
-color      = black
-label_size = 36p
-
-</plot>
-
-</plots>
+karyotype = karyotype.txt
 
 <ideogram>
 
@@ -31,7 +13,7 @@ band_transparency = 1
 radius           = 0.90r
 thickness        = 80p
 fill             = yes
-stroke_color     = dgrey
+stroke_color     = vdgrey
 stroke_thickness = 2p
 
 # Minimum definition for ideogram labels.
@@ -42,7 +24,6 @@ label_font       = default
 label_radius     = 1r + 75p
 label_size       = 50
 label_parallel   = yes
-#label_format     = eval( var(chr) =~ /scaffold(\d+)$/ ? $1: var(label) )
 label_format     = eval( var(chr) =~ /scaffold(\d+)$/ ? "": var(label) )
 
 </ideogram>
@@ -50,7 +31,7 @@ label_format     = eval( var(chr) =~ /scaffold(\d+)$/ ? "": var(label) )
 <links>
 
 <link>
-file          = test_links.txt
+file = links.txt
 radius = 0.99r
 crest  = 1
 ribbon           = yes
