code properly assigns start positions based on median start

--- a/config/rawConf.conf
+++ b/config/rawConf.conf
@@ -20,11 +20,13 @@ stroke_thickness = 2p
 
 show_label       = yes
 # see etc/fonts.conf for list of font names
-label_font       = default 
+label_font       = light 
 label_radius     = 1r + 75p
 label_size       = 50
+#label_color      = grey_a1
 label_parallel   = yes
-label_format     = eval( var(chr) =~ /scaffold(\d+)$/ ? "": var(label) )
+#label_format     = eval( var(chr) =~ /scaf(\d+)$/ ? $1: var(label) )
+label_format     = eval( var(chr) =~ /scaf(\d+)$/ ? "": var(label) )
 
 </ideogram>
 
@@ -38,7 +40,7 @@ ribbon           = yes
 flat             = yes
 stroke_color     = vdgrey
 stroke_thickness = 2
-color            = grey_a3
+color            = grey_a1
 
 bezier_radius        = 0r
 bezier_radius_purity = 0.15
