reverse links seem to work?

--- a/config/rawConf.conf
+++ b/config/rawConf.conf
@@ -37,7 +37,7 @@ file = links.txt
 radius = 0.99r
 crest  = 1
 ribbon           = yes
-flat             = yes
+flat             = no
 stroke_color     = vdgrey
 stroke_thickness = 2
 color            = grey_a1
