Make smaller connections more prominent

--- a/config/rawConf.conf
+++ b/config/rawConf.conf
@@ -51,9 +51,8 @@ bezier_radius_purity = 0.15
 <rules>
 <rule>
 condition  = 1
-z          = eval( scalar min(var(size1),var(size2) ) )
+z          = eval( scalar max(var(size1),var(size2) ) )
 </rule>
-
 </rules>
 
 ################################################################
