fix z depth rule for links (small links should be on top)

--- a/config/rawConf.conf
+++ b/config/rawConf.conf
@@ -44,16 +44,18 @@ color            = grey_a1
 
 bezier_radius        = 0r
 bezier_radius_purity = 0.15
-</link>
-
-</links>
 
 <rules>
 <rule>
 condition  = 1
-z          = eval( scalar max(var(size1),var(size2) ) )
+z          = eval( -(scalar average(var(size1),var(size2) )) )
 </rule>
 </rules>
+
+
+</link>
+
+</links>
 
 ################################################################
 # The remaining content is standard and required. It is imported 
