use minimap instead of bwa

--- a/config/rawConf.conf
+++ b/config/rawConf.conf
@@ -20,13 +20,15 @@ stroke_thickness = 2p
 
 show_label       = yes
 # see etc/fonts.conf for list of font names
-label_font       = light 
 label_radius     = 1r + 75p
-label_size       = 50
-#label_color      = grey_a1
-label_parallel   = yes
-#label_format     = eval( var(chr) =~ /scaf(\d+)$/ ? $1: var(label) )
+label_size       = 25
+label_font = condensed
 label_format     = eval( var(chr) =~ /scaf(\d+)$/ ? "": var(label) )
+label_snuggle        = yes
+max_snuggle_distance = 1r
+snuggle_tolerance    = 0.25r
+snuggle_sampling     = 2
+snuggle_refine       = yes
 
 </ideogram>
 
