add automatic scaling to genome size

--- a/config/rawConfHive.conf
+++ b/config/rawConfHive.conf
@@ -46,8 +46,7 @@ bezier_radius_power = 2
 #              100 kb = 1 px  if pixsize = 100,000
 
 <scale>
-pixsize = 200000
-#pixsize = scale_factor
+pixsize = scale_factor
 </scale>
 
 <axes>
