--- a/config/rawConfHive.conf
+++ b/config/rawConfHive.conf
@@ -4,12 +4,12 @@
 </colors>
 
 <image>
-size              = 1500
+size              = image_size
 
 dir  = .
 file = output_prefix
 
-png = yes
+svg = yes
 
 background        = white
 auto_alpha_steps  = 5
@@ -46,7 +46,8 @@ bezier_radius_power = 2
 #              100 kb = 1 px  if pixsize = 100,000
 
 <scale>
-pixsize = scale_factor
+#pixsize = scale_factor
+pixsize = 200000
 </scale>
 
 <axes>
