Added correct spacing and image scaling

--- a/config/rawConfHive.conf
+++ b/config/rawConfHive.conf
@@ -19,13 +19,6 @@ auto_alpha_steps  = 5
 # segment width (pixels)
 # segment spacing (pixels)
 
-<segments>
-file    = segment_filename
-width   = 3
-spacing = 10
-radius  = 50
-</segments>
-
 <links>
 <link>
 file         = links_filename
@@ -34,7 +27,7 @@ thickness    = 2
 #color        = grey_a4
 offset_start = 5
 offset_end   = 5
-crest        = 50
+crest        = 90
 bezier_radius_power = 2
 </link>
 </links>
@@ -46,8 +39,8 @@ bezier_radius_power = 2
 #              100 kb = 1 px  if pixsize = 100,000
 
 <scale>
-#pixsize = scale_factor
-pixsize = 200000
+pixsize = scale_factor
+#pixsize = 100000
 </scale>
 
 <axes>
@@ -85,3 +78,7 @@ segments = axis_2_order
 </axis>
 
 </axes>
+
+<segments>
+file    = segment_filename
+width   = 100
