Add outline to ribbons (twisting not yet implemented)

--- a/config/rawConfHive.conf
+++ b/config/rawConfHive.conf
@@ -24,10 +24,10 @@ auto_alpha_steps  = 5
 file         = links_filename
 ribbon       = yes
 thickness    = 2
-#color        = grey_a4
+color        = grey
 offset_start = 5
 offset_end   = 5
-crest        = 90
+crest        = 100
 bezier_radius_power = 2
 </link>
 </links>
@@ -81,4 +81,3 @@ segments = axis_2_order
 
 <segments>
 file    = segment_filename
-width   = 100
