draw links edges after over colour ribbon

--- a/config/rawConfHive.conf
+++ b/config/rawConfHive.conf
@@ -24,7 +24,7 @@ auto_alpha_steps  = 5
 file         = links_filename
 ribbon       = yes
 thickness    = 2
-color        = grey
+color        = vdgrey
 offset_start = 5
 offset_end   = 5
 crest        = 100
