options to print label

--- a/config/rawConf.conf
+++ b/config/rawConf.conf
@@ -23,7 +23,7 @@ show_label       = yes
 label_radius     = 1r + 75p
 label_size       = 25
 label_font = condensed
-label_format     = eval( var(chr) =~ /scaf(\d+)$/ ? "": var(label) )
+label_format     = label_format_str
 label_snuggle        = yes
 max_snuggle_distance = 2r
 snuggle_tolerance    = 0.5r
